# databased_project

./: README.md  pyproject.toml
analysis/: analysis_helpers.py  article_counts.py  bag_of_words.py  basic_sentiment.py  most_frequent_words.py
analysis/data/: bs_candidate.json  bs_news.json  count_cand.json  count_cand_by_news.json  count_news.json  sentiment.json  word_freq_cand_by_news.json  word_freq_candidate.json  word_freq_news.json
data/: cand_by_newspaper_bs.json  candidate.csv  candidate_info.csv  clean_articles.json  clean_articles_abr.json  crain.json  defender.json  hph.json  ln.json  news_database.db  newspaper_dataset.csv  proquest_export.py  proquest_process.py  triibe.json
data/proquest_files/: chicago_tribune_final.tar  crain.tar  export.py  process_articles.py  proquest_export.py  proquest_process.py  select_articles.py
data_viz/: plots.py
databased/: __main__.py  app.py
databased/analysis/: analysis_helpers.py  article_counts.py  basic_sentiment.py  most_frequent_words.py
databased/analysis/data/: bs_news.json  count_cand.json  count_cand_by_news.json  count_news.json  sentiment.json  word_freq_cand_by_news.json  word_freq_candidate.json  word_freq_news.json
databased/cleaning/: clean.py
databased/data/: clean_articles_abr.json  cleaning_name_tokens.csv  crain.json  defender.json  hph.json  news_bs.json  news_database.db  triibe.json
databased/data/proquest_files/: chicago_tribune_2023.tar
databased/data_viz/: data_processing.py  plots.py
databased/scrapers/: defender.py  hph_scraper.py  scrape_lawndale.py  tribune_crain_process.py  tribune_crain_select.py  triibe.py  utils.py
scrapers/: defender.json  defender.py  hph_scraper.py  process_articles_ct_cc.py  scrape_lawndale.py  select_articles_ct_cc.py  sun_time.py  tribune_crain_process.py  tribune_crain_select.py  triibe.json  triibe.py  utils.py
scrapers/data/: chicago_tribune_2023.parquet
utilities/: clean.py  data_retrieval.py
(+3 files in other folders)
