[tool.poetry]
name = "databased-project"
version = "0.1.0"
description = ""
authors = ["Abe Burton, Lee-Or Bentovim, Maddie Roberts"]
readme = "README.md"
packages = [{include = "databased_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
lxml = "^4.9.2"
numpy = "^1.24.2"
seaborn = "^0.12.2"
plotly = "^5.13.0"
selenium = "^4.8.2"
requests = "^2.28.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
