[tool.poetry]
name = "databased-project"
version = "0.1.0"
description = ""
authors = ["Abe Burton, Lee-Or Bentovim, Maddie Roberts, Kathryn Link-Oberstar"]
readme = "README.md"
packages = [{include = "databased_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
lxml = "^4.9.2"
numpy = "^1.24.2"
seaborn = "^0.12.2"
plotly = "^5.13.0"
pyarrow = "^11.0.0"
nltk = "^3.8.1"
corpora = "^1.0"
pathlib = "^1.0.1"
dash = "^2.8.1"
plotly-express = "^0.4.1"
dash-bootstrap-components = "^1.4.0"
dash-html-components = "^2.0.0"
dash-core-components = "^2.0.0"
wordcloud = "^1.8.2.2"
matplotlib = "^3.7.1"
response = "^0.5.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
